--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         <input type="password" placeholder="Пароль">
         <input type="password" placeholder="Повторите пароль">
         <input type="email" placeholder="Почта">
+        <label class="assertion">
+          <input type="checkbox" class="check-box" required>
+          <span class="c-style"></span>
+          <p>Я согласен с <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0&ab_channel=Duran">правилом</a> сообщества и на обработку персональных данных</p>
+        </label>
         <input type="submit" value="Создать аккаунт">
         <p>Зарегистрироваться с помощью:</p>
         <div class="social">
